fix(ffe-form): Avoid inline styles for radio-switches
This commit adds a style rule to add some margin between radio switch
items. This way, the consumer doesn't need to add it themselves.

--- a/packages/ffe-form/less/radio-switch.less
+++ b/packages/ffe-form/less/radio-switch.less
@@ -28,6 +28,10 @@
     @media screen and (min-width: @breakpoint-sm) {
         margin-bottom: 0;
     }
+
+    & + input + .ffe-radio-switch {
+        margin-left: 5px;
+    }
 }
 
 .ffe-radio-input {
